@@ -16,39 +16,47 @@ int main (void)
   SInt64 int_64;
   double d;
   
-  loc = CFLocaleCreate (NULL, CFSTR("en_US"));
+  loc = CFLocaleCreate (NULL, __CFStringMakeConstantString("en_US"));
   
   nf = CFNumberFormatterCreate (NULL, loc, kCFNumberFormatterNoStyle);
   int_8 = 16;
-  PASS_CFEQ(CFNumberFormatterCreateStringWithValue (NULL, nf,
-    kCFNumberSInt8Type, &int_8), CFSTR("16"), "SInt8 formatted correctly");
+  str = CFNumberFormatterCreateStringWithValue (NULL, nf,
+    kCFNumberSInt8Type, &int_8);
+  PASS_CFEQ(str, __CFStringMakeConstantString("16"), "SInt8 formatted correctly");
+  CFRelease (str);
+  
+  num = CFNumberCreate (NULL, kCFNumberSInt8Type, &int_8);
+  CFNumberFormatterSetProperty (nf, kCFNumberFormatterFormatWidth, num);
+  str = CFNumberFormatterCreateStringWithValue (NULL, nf,
+    kCFNumberSInt8Type, &int_8);
+  PASS_CFEQ(str, __CFStringMakeConstantString("              16"), "SInt8 formatted correctly");
   CFRelease(nf);
   
   nf = CFNumberFormatterCreate (NULL, loc, kCFNumberFormatterCurrencyStyle);
   int_16 = 300;
   PASS_CFEQ(CFNumberFormatterCreateStringWithValue (NULL, nf,
-    kCFNumberSInt16Type, &int_16), CFSTR("$300.00"),
+    kCFNumberSInt16Type, &int_16), __CFStringMakeConstantString("$300.00"),
     "SInt16 formatted correctly");
   CFRelease(nf);
   
   nf = CFNumberFormatterCreate (NULL, loc, kCFNumberFormatterScientificStyle);
   int_32 = 68456;
   PASS_CFEQ(CFNumberFormatterCreateStringWithValue (NULL, nf,
-    kCFNumberSInt32Type, &int_32), CFSTR("6.8456E4"),
+    kCFNumberSInt32Type, &int_32), __CFStringMakeConstantString("6.8456E4"),
     "SInt32 formatted correctly");
   CFRelease(nf);
   
   nf = CFNumberFormatterCreate (NULL, loc, kCFNumberFormatterDecimalStyle);
   int_64 = 315000000;
   PASS_CFEQ(CFNumberFormatterCreateStringWithValue (NULL, nf,
-    kCFNumberSInt64Type, &int_64), CFSTR("315,000,000"),
+    kCFNumberSInt64Type, &int_64), __CFStringMakeConstantString("315,000,000"),
     "SInt64 formatted correctly");
   CFRelease(nf);
   
   nf = CFNumberFormatterCreate (NULL, loc, kCFNumberFormatterPercentStyle);
   d = 1.234;
   PASS_CFEQ(CFNumberFormatterCreateStringWithValue (NULL, nf,
-    kCFNumberDoubleType, &d), CFSTR("123%"),
+    kCFNumberDoubleType, &d), __CFStringMakeConstantString("123%"),
     "Double formatted correctly");
   
   return 0;
